Fixed folders and image

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" media="screen and (max-width:1360px)" href="tablet_ipad.css">
-    <link rel="stylesheet" media="screen and (max-width:1020px)" href="mobile_max.css">
-    <link rel="stylesheet" media="screen and (max-width:900px)" href="mobile.css">
-    <link rel="stylesheet" media="screen and (max-width:650px)" href="min.css">
-    <link rel="stylesheet" media="screen and (max-width:490px)" href="last.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" media="screen and (max-width:1360px)" href="css/tablet_ipad.css">
+    <link rel="stylesheet" media="screen and (max-width:1020px)" href="css/mobile_max.css">
+    <link rel="stylesheet" media="screen and (max-width:900px)" href="css/mobile.css">
+    <link rel="stylesheet" media="screen and (max-width:650px)" href="css/min.css">
+    <link rel="stylesheet" media="screen and (max-width:490px)" href="css/last.css">
 
     <style>
         @media only screen and (max-width: 1545px) 
