--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
 
 <body>
 
-    <div class="upperbody">        
+    <div class="upperbody" style="background-image: url(bg2.jpg); background-position: center;">        
 
+        
         <header>
             <div class="logo">
                 <img src="images\logo.jpg"
