--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 
 
 </head>
-
+<!-- style="background-image: url(bg2.jpg); background-position: center;" -->
 <body>
 
-    <div class="upperbody" style="background-image: url(bg2.jpg); background-position: center;">        
+    <div class="upperbody" >        
 
         
         <header>
